[package]
name = "assignment_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.5.0"
tokio = "1.28.0"
bson = "2.6.1"
serde = { version = "1.0.160", features = ["derive"] }
futures = "0.3.28"